<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    Logo    -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo_foreground"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="-18dp" />

    <!-- Add a MapView -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="297dp"
        android:layout_height="467dp"
        app:layout_constraintBottom_toTopOf="@+id/addressTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Add a TextView for the address -->
    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/restaurant_address"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="599dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/address2TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/restaurant_directions"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="650dp" />


</androidx.constraintlayout.widget.ConstraintLayout>